Fix: Horizontal scroll on landing page

--- a/mymoneyapp/static/landing.css
+++ b/mymoneyapp/static/landing.css
@@ -5,14 +5,7 @@ h3 {
     margin: 1rem auto 0 auto;
 }
 
-main {
-    width: 100vw;
-    padding: 0;
-    margin: 0;
-}
-
 #slogan {
-    width: 95%;
     height: 95vh;
     display: grid;
     grid-template-columns: 12;
@@ -45,7 +38,6 @@ main {
 }
 
 #info-cards {
-    width: 9%;
     display: grid;
     gap: 1.5rem;
     grid-template-columns: repeat(2, 1fr);
