--- a/mymoneyapp/static/user-layout.css
+++ b/mymoneyapp/static/user-layout.css
@@ -65,7 +65,7 @@ main {
     }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 420px) {
     main {
         width: 95%;
         padding: 2.5rem 1rem;
